# minecraft-tool

./: .gitignore  docker-compose.yml
.github/workflows/: pipeline.yml
backend/: Dockerfile  alembic.ini  auth.py  main.py  makemigrations.sh  pyproject.toml
backend/db/: engine.py  models.py
backend/db/auth/: models.py  tools.py
backend/forms/: auth.py
backend/migrations/: env.py
backend/migrations/versions/: 7c1686317b45_alter_username.py
backend/routes/html_views/: views.py
backend/static/: style.css
backend/templates/: index.html  login.html  register.html
terraform/: main.tf
