[project]
name = "minecraft-tool"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "jinja2>=3.1.5",
    "passlib[bcrypt]>=1.7.4",
    "psycopg2>=2.9.10",
    "sqlmodel>=0.0.22",
]

[dependency-groups]
dev = [
    "ruff>=0.9.4",
]
